user exists redirect login page

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_ERPNEXT_API_URL=https://gcdev.m.frappe.cloud/
 VITE_ERPNEXT_API_KEY=6ef09638b431358
 VITE_ERPNEXT_API_SECRET=046ffdef8892e5c
-
+VITE_LOGIN_URL=https://geri-care-supplier.vercel.app/login
